--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ body {
     line-height: 65px;
     padding-top: 20px;
     padding-bottom: 20px;
-    /* -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease;  */
+    -webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease; 
 }
 .logo-and-free{
     float: left;
@@ -72,10 +72,10 @@ body {
 .main-list ul li a:hover{
     color: rgb(4, 229, 245);
 }
-/* .scroll-effect {
+.scroll-effect {
     padding: 0;
     background-color: rgb(29, 29, 29);
-} */
+}
 .top-background{
     width: 100%;
     height: 83vh;
@@ -86,20 +86,49 @@ body {
 .mid-container{
     width: 100%;
     height: 450px;
-    background-color: blue;
     display: flex;
     flex-direction: row;
 }
-.mid-left-container, .mid-right-container{
+.mid-left-container, .mid-right-container, .mid-center-container{
     height: inherit;
     width: 33.33%;
-    background-color: aqua;
 }
 .mid-center-container{
-    height: inherit;
-    width: 33.34%;
-    background-color: yellow;
+    background-image: url(images/mid-center.jpg);
 }
+.mid-left-container{
+    background-image: url(images/mid-left.jpg);
+}
+.mid-right-container{
+    background-image: url(images/mid-right.jpg);
+}
+.mid-image-overlay{
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+.mid-image-overlay:hover {
+    opacity: 1;
+}
+.mid-title{
+    font-size: 2em;
+    font-weight: bold;
+    padding-bottom: 50px;
+    text-align: center;
+}
+.mid-description{
+    font-size: 1.25em;
+    margin-top: 0.25em;
+    text-align: center;
+}
+
 .footer{
     width: 100%;
     height: 220px;
